# consensus

./: Cargo.toml  LICENSE  README.md
.github/workflows/: core-parity.yml
benches/: verification.rs
docs/: github-ci.md  integration-roadmap.md
scripts/: generate_script_assets_upstream_metadata.py
src/: lib.rs  script.rs  tx.rs  types.rs
tests/: core_bip341_wallet_vectors.rs  core_cpp_runtime_diff.rs  core_diff_bridge.rs  core_fixture_hashes.rs  core_multisig_unit_parity.rs  core_script_p2sh_unit_parity.rs  core_script_segwit_detection_parity.rs  core_scriptnum_unit_parity.rs  core_sighash_cache_parity.rs  core_sighash_randomized.rs  core_sighash_vectors.rs  core_sigop_surface.rs  core_tx_vectors.rs  core_witness_unit_parity.rs  random_consistency.proptest-regressions  random_consistency.rs  script_asm.rs  script_assets.rs  script_parse_parity.rs  script_vectors.rs
tests/core_cpp_helper/: CMakeLists.txt  core_consensus_helper.cpp
tests/data/: script_assets_generated_metadata.json  script_assets_test.json  script_assets_upstream_metadata.json
