[package]
name = "consensus"
version = "0.1.0"
edition = "2021"
description = "Pure Rust implementation of Bitcoin's libbitcoinconsensus API"
license = "MIT OR Apache-2.0"
repository = ""
homepage = ""
keywords = ["bitcoin", "consensus", "libbitcoinconsensus"]
categories = ["cryptography", "science::cryptography"]

[features]
default = ["std"]
std = ["bitcoin/std"]
external-secp = ["std", "dep:secp256k1", "secp256k1/global-context"]

[dependencies]
bitcoin = { version = "0.32.7", default-features = false }
secp256k1 = { version = "0.29.1", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0"
