[package]
name = "consensus"
version = "0.1.0"
edition = "2021"
description = "Pure Rust implementation of Bitcoin's libbitcoinconsensus API"
license = "MIT OR Apache-2.0"
repository = ""
homepage = ""
keywords = ["bitcoin", "consensus", "libbitcoinconsensus"]
categories = ["cryptography", "science::cryptography"]

[features]
default = ["std"]
std = ["bitcoin/std"]
external-secp = ["std", "dep:secp256k1", "secp256k1/global-context"]
core-diff = ["std", "dep:bitcoinconsensus"]

[dependencies]
bitcoin = { version = "0.32.8", default-features = false }
secp256k1 = { version = "0.31.1", default-features = false, optional = true }
bitcoinconsensus = { git = "https://github.com/rust-bitcoin/rust-bitcoinconsensus", rev = "ca6b5316b58c62d1abe83517d705fdcfb555a1a6", optional = true, default-features = true }

[dev-dependencies]
serde_json = "1.0.145"
proptest = "1.9.0"
criterion = "0.8.1"

[[bench]]
name = "verification"
harness = false
